<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CityLines</string>

    <string-array name="tabs_array">
        <item>City</item>
        <item>Intercity</item>
        <item>Map</item>
        <item>Configure</item>
    </string-array>
    
    <string name="state_prompt">State</string>
    <string name="municipality_prompt">Municipality</string>
    <string name="city_prompt">City</string>
    
    <string name="destination">Destination:</string>
    <string name="date">Date:</string>
    <string name="selectdate">Select date</string>
    <string name="timetable">Timetable:</string>
    
    <string name="departures">Departures:</string>
    <string name="arrivals">Arrivals:</string>
    <string name="station">Station:</string>
    <string name="gate">Gate:</string>
    <string name="line">Line:</string>
    <string name="phone">Phone:</string>
    
    <string name="nearby_stations">Nearby stations:</string>
    <string name="refresh">Refresh</string>
    <string name="distance_to_station">Distance to station: %1$s km</string>
    
    <string name="departure_from">Departure from %1$s:</string>
    <string name="return_from">Return from %1$s:</string>
    <string name="action_update">Update</string>
    <string name="action_location">Location</string>
</resources>