<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/state_text_view" android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:text="@string/state_prompt" />
    <Spinner android:id="@+id/state_spinner" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:prompt="@string/state_prompt"
        android:spinnerMode="dialog"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/municipality_text_view" android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:text="@string/municipality_prompt" />
    <Spinner android:id="@+id/municipality_spinner" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:prompt="@string/municipality_prompt" 
        android:spinnerMode="dialog"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/city_text_view" android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:text="@string/city_prompt" />
    <Spinner android:id="@+id/city_spinner" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:prompt="@string/city_prompt"
        android:spinnerMode="dialog" />
</LinearLayout>