<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
     
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"/>
        <AutoCompleteTextView
            android:id="@+id/editDestination"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
        </AutoCompleteTextView>

        <RelativeLayout android:id="@+id/dateControls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginLeft="5dp"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/datePickEdit"
                android:clickable="false" 
                android:cursorVisible="false" 
                android:focusable="false" 
                android:focusableInTouchMode="false"                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:inputType="date">
            </EditText>
            <ImageButton
                android:id="@+id/datePickButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/datePickEdit"
                android:layout_toRightOf="@+id/datePickEdit"
                android:contentDescription="@string/selectdate"
                android:cropToPadding="true"
                android:src="@drawable/ic_datepicker" />
        </RelativeLayout>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            />    
    </LinearLayout>
    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>     
</LinearLayout>